# ROTTA-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  version.md
book/: arrayy.md  guide.md  introduce.md  learn.md
book/section/: 1_tensor.md  2_Activation_Function.md  3_Loss_Function.md  4_Module.md  5_Optimazer.md  5_Optimizer.md  6_simple_AI_model.md  7_Dataset_and_DataHandler.md  8_par_datahandler.md  9_saving_parameters.md
dataset/: dataset.md
dataset/nlp/Dataset for chatbot_Georgy Silkin/: source.txt
experimental_model/: experimental_model.md
experimental_model/gru_seq2seq/: main.rs  model.rs
experimental_model/lstm_seq2seq/: main.rs  model.rs
model/gru_seq2seq/: main.rs  model.rs
model/lstm_seq2seq/: main.rs  model.rs
philosophy_of_rotta_rs/: 1_why_rotta_rs_was_developed.md  2_tensor_and_arrayy.md  3_tensor_philosophy.md
src/: lib.rs  main.rs
src/arrayy/: arrayy.rs  mod.rs
src/arrayy/config/: arrayy_display.rs
src/arrayy/function/: exp.rs  mod.rs  permute.rs  reshape.rs  slice.rs  sum_axis.rs  transpose.rs
src/arrayy/operation/: broadcasting.rs  mod.rs
src/rotta_rs/: mod.rs  rotta_type.rs
src/rotta_rs/activation/: mod.rs  relu.rs  sigmoid.rs  softmax.rs  softplus.rs  tanh.rs
src/rotta_rs/arrayy/: array.rs
src/rotta_rs/arrayy_external/: array.rs  mod.rs
src/rotta_rs/loss/: cross_entropy_loss.rs  mae.rs  mod.rs  mse.rs  sum_square_residual.rs
src/rotta_rs/module/: mod.rs  module.rs
src/rotta_rs/optimazer/: ada_grad.rs  mod.rs  sgd.rs  sgd_momen.rs
src/rotta_rs/rotta/: allocator.rs  (+2 more)
src/rotta_rs_module/: mod.rs  rotta_type.rs
(+245 files in other folders)
