[package]
name = "rotta_rs"
version = "0.0.6"
edition = "2024"
license = "Apache-2.0"
description = "a Deep Learning library with rust language"
keywords = ["AI", "machine-learning", "deep-learning", "neural-network", "tensor"]

[lib]
name = "rotta_rs"
path = "src/lib.rs"

[dependencies]
rand = "0.9.1"
rand_distr = "0.5.1"
rayon = "1.10.0"
matrixmultiply = "0.3.10"
rand_chacha = "0.9.0"
serde = "1.0.219"

[dependencies.uuid]
version = "1.17.0"
# Lets you generate random UUIDs
features = [
    "v4",
]
